# simplechat

./: .gitignore  README.md  pyproject.toml
.github/: FUNDING.yml
simplechat/: cli.py  db.py  plugin.py
